2016-10-02  Araki Ken  <arakiken@users.sf.net>

	* man/mlclient.1: Updated.

	* ui_screen_manager.c:
	  - mlclient() accepts --vsep and --hsep options.
	  - retain_encoding and retain_server arguments are added to open_or_split_screen().

2016-09-27  Araki Ken  <arakiken@users.sf.net>

	* vt_line.c: set_real_modified() is called in vt_line_unuse_ctl() for *_render().

2016-09-24  Araki Ken  <arakiken@users.sf.net>

	* configure.in, vtemu/Makefile.in: libmlterm_core is renamed to libmlterm_coreotl
	  if open type layout is supported.

	* doc/ja/README.ja, man/mlterm.1, etc/main, etc/main.ja: Updated

	* ui_main_config.c: "ssh_auto_reconnect" / --rcn option is added.

	* vt_pty_ssh.[ch], vt_pty.h, vt_pty_ssh.c:
	  - Automatic reconnection to ssh server in unexpected disconnection is supported.
	  - vt_pty_ssh_set_use_auto_reconnect() is added.

2016-09-04  Araki Ken  <arakiken@users.sf.net>

	* ui_layout.c: screen->window.[vh]margin * 2 is added to term->separator_[xy].

2016-09-03  Araki Ken  <arakiken@users.sf.net>

	* ui.h: GUI_TYPE is added.

	* uitoolkit/*/ui.h, ui_screen.c: XIM_SPOT_IS_LINE_TOP is added.

	* vte.c: vte_terminal_event_check_gregex_simple() and vte_get_features()
	  are implemented.

2016-08-29  Araki Ken  <arakiken@users.sf.net>

	* ef_tblfunc_loader.c: The names of dynamically Loaded modules are changed
	  from libef_xxx.so to libmef_xxx.so.

	* ui_event_source.c, ui_picture.c: X_PROTOCOL -> USE_XLIB.

2016-08-29  Araki Ken  <arakiken@users.sf.net>

	* java/.java.policy: Added.

	* xwindow/ -> uitoolkit/
	  kiklib/ -> baselib/
	  mkf/ -> encodefilter/
	  mlterm/ -> vtemu/
	  libkik -> libpobl
	  libmkf -> libmef

	* Google coding style is applied.

2016-08-21  Araki Ken  <arakiken@users.sf.net>

	* ml_pty_ssh.c: Compression of ssh connection is always enabled if libssh2-1.5.0
	  or later is used.

2016-08-18  Araki Ken  <arakiken@users.sf.net>

	* README.cosole, PROTOCOL: Updated.

	* main-con.c: termios is reset on exit.
